desktop mainNav done

--- a/src/Pages/HomePage/HomePage.module.scss
+++ b/src/Pages/HomePage/HomePage.module.scss
@@ -24,6 +24,9 @@
   .productCard {
     border: 1px solid #dfe4ea;
     border-radius: 5px;
+    a {
+      text-decoration: none;
+    }
     &:hover {
       cursor: pointer;
     }
