--- a/src/Components/NavBar.module.scss
+++ b/src/Components/NavBar.module.scss
@@ -1,9 +1,26 @@
 @import "../Mixins/mixins.scss";
+@import "../Mixins/breakPoints.scss";
 .mainNavWrapper {
   padding: 1em 2em;
   display: flex;
   justify-content: space-between;
   background-color: #2f3640;
+
+  @include media("<800px") {
+    .logo {
+      font-size: 1.65em !important;
+    }
+    .pageNavigation {
+      display: none;
+    }
+    .controlsArea {
+      display: none !important;
+    }
+    .responsiveBtn {
+      display: flex !important;
+    }
+  }
+
   .logo {
     text-decoration: none;
     color: white;
@@ -39,5 +56,52 @@
         margin-left: 5px;
       }
     }
+  }
+  .responsiveBtn {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    > button {
+      @include actBtn(#a4b0be);
+      padding: 0.25em 0.5em;
+      font-size: 1.5em;
+    }
+  }
+}
+
+#submenu {
+  display: none;
+  background-color: #2f3640;
+  color: white;
+  margin-top: -16px;
+  padding-bottom: 1.5em;
+  flex-direction: column;
+  gap: 1.5em;
+  > ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    > li {
+      list-style: none;
+      margin-top: 1em;
+      > a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.25em;
+        @include hoverColor(#fff, #95a5a6);
+      }
+    }
+  }
+  > button {
+    padding: 0.5em 1em;
+    font-size: 1.15em;
+    width: 150px;
+    margin: auto;
+    > span {
+      margin-left: 0.75em;
+    }
+    @include actBtn(#95a5a6);
   }
 }
