--- a/src/Pages/HomePage/HomePage.module.scss
+++ b/src/Pages/HomePage/HomePage.module.scss
@@ -34,6 +34,7 @@
       > img {
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
+        max-width: 250px;
       }
     }
 
